# Trivela

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: frontend-ci.yml
backend/: .env.example  Dockerfile  README.md  package.json
backend/src/: db.js  index.js  index.test.js  pagination.js  pagination.test.js  server.js  (+1 more)
contracts/rewards/: Cargo.toml  README.md
contracts/rewards/fuzz/: Cargo.toml
contracts/rewards/fuzz/fuzz_targets/: fuzz_balance.rs
contracts/rewards/src/: lib.rs  test.rs
contracts/rewards/test_snapshots/test/: test_balance_empty.1.json  test_batch_credit.1.json  test_batch_credit_is_atomic_on_overflow.1.json  test_campaign_multiplier_applies_to_credit.1.json  test_campaign_multiplier_rounding_floor.1.json  test_campaign_rewards_integration_flow.1.json  test_claim_emits_event_and_updates_total_claimed.1.json  test_claim_more_than_balance_errors.1.json  test_credit_and_balance.1.json  test_credit_and_balance_emits_event.1.json  test_credit_overflow_errors.1.json  test_credit_respects_max_per_call.1.json  test_metadata.1.json  test_schema_version_and_migrate_entrypoint.1.json
docs/: ARCHITECTURE_OVERVIEW.md  DEPLOYMENT.md  ERROR_CODES.md  ISSUES.md  RELEASE_PROCESS.md  STELLAR_NETWORKS.md  issues-data.json  upgradeability.md
frontend/: README.md  index.html  package.json  playwright.config.js  vite.config.js
scripts/: create-github-issues.js  deploy-testnet.sh  github-labels.json  install-node-and-git.sh  push-to-org.sh  setup-git.sh  sync-github-labels.js
(+73 files in other folders)
